[feat] - add README file [feat] - config .env variables